initial commit adding react-static

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,20 @@ Thumbs.db
 # Editor backup files #
 #######################
 *~
+
+# React related files #
+#######################
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
