added eslint, prettier

--- a/src/react/package.json
+++ b/src/react/package.json
@@ -15,7 +15,6 @@
     "find": "^0.3.0",
     "fs": "^0.0.1-security",
     "html-react-parser": "^1.4.8",
-    "prettier": "^2.5.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
@@ -32,6 +31,16 @@
     "@types/react": "^16.14.4",
     "@types/react-dom": "^16.9.11",
     "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.29.3",
+    "prettier": "^2.5.1",
     "react-hot-loader": "^4.13.0",
     "serve": "^11.3.2",
     "typescript": "^4.1.5"
