WIP: getDocRoutes successfully building routes

--- a/src/react/package.json
+++ b/src/react/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "start": "react-static start",
+    "debug": "react-static start --debug",
     "stage": "react-static build --staging",
     "build": "react-static build",
     "bundle": "react-static bundle",
