--- a/src/react/package.json
+++ b/src/react/package.json
@@ -11,15 +11,20 @@
     "serve": "serve dist -p 3000 -s"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@reach/router": "^1.3.4",
     "axios": "^0.21.1",
     "find": "^0.3.0",
+    "framer-motion": "^6",
     "fs": "^0.0.1-security",
     "html-react-parser": "^1.4.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
     "react-static": "^7.5.1",
+    "react-static-plugin-emotion": "^7.6.2",
     "react-static-plugin-reach-router": "^7.5.1",
     "react-static-plugin-sitemap": "^7.5.1",
     "react-static-plugin-source-filesystem": "^7.5.1",
